# 2dib-lmb

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
include/: Constants.hpp  ImmersedBoundary.hpp  LBESolver.hpp  Types.hpp  VTKWriter.hpp
src/: ImmersedBoundary.cpp  LBESolver.cpp  VTKWriter.cpp  main.cpp
